Add content for Overview, Schedules, Speakers, Call for Papers, Organizers, Accepted Papers, and Committee sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <h1>Speakers</h1>
   <p>Meet the speakers who will be presenting at the NeuroAI Workshop. We have a diverse lineup of experts from the fields of neuroscience and artificial intelligence.</p>
   <ul>
-    <li><strong>Dr. Jane Smith</strong> - Expert in Neural Networks</li>
+    <!-- <li><strong>Dr. Jane Smith</strong> - Expert in Neural Networks</li> -->
     <li><strong>Dr. John Doe</strong> - Specialist in Computational Neuroscience</li>
     <li><strong>Dr. Emily White</strong> - Renowned AI Researcher</li>
     <li><strong>Dr. Michael Brown</strong> - Cognitive Computing Pioneer</li>
