--- a/index.html
+++ b/index.html
@@ -2,38 +2,19 @@
 layout: page
 title: "Home"
 permalink: /
-body_class: home-page
 hide_title: true
 ---
 
-<div class="conference-details">
-  <h2>1st Reliability Quantification for LLMs Workshop @AAAI</h2>
-  <h3>Quantifying Reliability in Language Models</h3>
+<div style="text-align: center; padding: 20px;">
+  <h1>1st Reliability Quantification for LLMs Workshop @AAAI</h1>
+  <h2>Quantifying Reliability in Language Models</h2>
   
   <p><strong>Date:</strong> January, 2026</p>
   <p><strong>Location:</strong> AAAI 2026, Singapore EXPO</p>
   <p><strong>Status:</strong> Under Review</p>
   
   <div style="margin-top: 30px;">
-    <p>Welcome to the 1st Reliability Quantification for LLMs Workshop at AAAI 2026. This workshop focuses on developing methods and metrics for quantifying reliability in Large Language Models.</p>
-    
-    <p>Our workshop aims to bring together researchers and practitioners to discuss challenges and solutions in making Large Language Models more reliable and trustworthy.</p>
-  </div>
-</div>
-
-<div style="text-align: center; margin: 40px 0;">
-  <h3>Important Dates</h3>
-  <p>Submission deadline and other important dates will be announced soon.</p>
-  
-  <div style="margin-top: 30px;">
-    <h3>Topics of Interest</h3>
-    <p>We welcome submissions on topics including but not limited to:</p>
-    <ul style="text-align: left; display: inline-block; margin-top: 15px;">
-      <li>Uncertainty quantification in LLMs</li>
-      <li>Reliability metrics and evaluation methods</li>
-      <li>Robustness testing and validation</li>
-      <li>Trustworthy AI and model interpretability</li>
-      <li>Error detection and correction mechanisms</li>
-    </ul>
+    <p>Welcome to the 1st Reliability Quantification for LLMs Workshop at AAAI 2026.</p>
+    <p>This workshop focuses on developing methods and metrics for quantifying reliability in Large Language Models.</p>
   </div>
 </div> 
