--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 layout: page
 title: "Home"
 permalink: /
+body_class: home-page with-background
 hide_title: true
 ---
 
-<div style="text-align: center; padding: 20px;">
+<div class="conference-details">
   <h1>1st Reliability Quantification for LLMs Workshop @AAAI</h1>
   <h2>Quantifying Reliability in Language Models</h2>
   
