--- a/index.html
+++ b/index.html
@@ -17,5 +17,19 @@ hide_title: true
   <div style="margin-top: 30px;">
     <p>Welcome to the 1st Reliability Quantification for LLMs Workshop at AAAI 2026.</p>
     <p>This workshop focuses on developing methods and metrics for quantifying reliability in Large Language Models.</p>
+    
+    <h3 style="margin-top: 40px; color: #e25440;">Workshop Goals</h3>
+    <ul style="text-align: left; max-width: 800px; margin: 20px auto;">
+      <li>Advance understanding of LLM reliability quantification</li>
+      <li>Develop practical metrics and evaluation frameworks</li>
+      <li>Foster collaboration between researchers and practitioners</li>
+      <li>Address challenges in high-stakes applications</li>
+    </ul>
+    
+    <div style="margin-top: 40px; padding: 20px; background: rgba(240, 248, 255, 0.7); border-radius: 10px;">
+      <h3 style="color: #e25440;">Important Information</h3>
+      <p>We invite submissions on uncertainty quantification, reliability metrics, robustness, and applications of reliable LLMs in critical domains.</p>
+      <p><strong>Submission details and important dates will be announced soon.</strong></p>
+    </div>
   </div>
 </div> 
