--- a/index.html
+++ b/index.html
@@ -10,26 +10,7 @@ hide_title: true
   <h1>1st Reliability Quantification for LLMs Workshop @AAAI</h1>
   <h2>Quantifying Reliability in Language Models</h2>
   
-  <p><strong>Date:</strong> January, 2026</p>
-  <p><strong>Location:</strong> AAAI 2026, Singapore EXPO</p>
-  <p><strong>Status:</strong> Under Review</p>
-  
-  <div style="margin-top: 30px;">
-    <p>Welcome to the 1st Reliability Quantification for LLMs Workshop at AAAI 2026.</p>
-    <p>This workshop focuses on developing methods and metrics for quantifying reliability in Large Language Models.</p>
-    
-    <h3 style="margin-top: 40px; color: #e25440;">Workshop Goals</h3>
-    <ul style="text-align: left; max-width: 800px; margin: 20px auto;">
-      <li>Advance understanding of LLM reliability quantification</li>
-      <li>Develop practical metrics and evaluation frameworks</li>
-      <li>Foster collaboration between researchers and practitioners</li>
-      <li>Address challenges in high-stakes applications</li>
-    </ul>
-    
-    <div style="margin-top: 40px; padding: 20px; background: rgba(240, 248, 255, 0.7); border-radius: 10px;">
-      <h3 style="color: #e25440;">Important Information</h3>
-      <p>We invite submissions on uncertainty quantification, reliability metrics, robustness, and applications of reliable LLMs in critical domains.</p>
-      <p><strong>Submission details and important dates will be announced soon.</strong></p>
-    </div>
-  </div>
+  <p>Under Review</p>
+  <p>January, 2026</p>
+  <p>AAAI 2026, Singapore EXPO</p>
 </div> 
